package br.unitins.model;public enum Perfil {
}
