package br.unitins.model;


import jakarta.persistence.MappedSuperclass;

@MappedSuperclass
public abstract class  Produto extends DefaultEntity {

    private String descricao;
    private Float valor;

    private Integer quantidadeProduto;




    public Integer getQuantidadeProduto() {
        return quantidadeProduto;
    }

    public void setQuantidadeProduto(Integer quantidadeProduto) {
        this.quantidadeProduto = quantidadeProduto;
    }

    public String getDescricao() {
        return descricao;
    }

    public void setDescricao(String descricao) {
        this.descricao = descricao;
    }

    public Float getValor() {
        return valor;
    }

    public void setValor(Float valor) {
        this.valor = valor;
    }
}
